refactoring to monolit
