# src/main/java/ru/planet/auth/dto/User.java
@@ -1,0 +1,8 @@
+package ru.planet.auth.dto;
+
+import ru.tinkoff.kora.database.jdbc.EntityJdbc;
+
+@EntityJdbc
+public record User (Long id, String login, String password) {
+}
+
